// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`network reducer should handle NETWORK_ADD_ERROR 1`] = `
  "errors": {
    "0": bug,
    "1": warning,
    "2": feature,
  },
  "isLoading": false,

`;

exports[`network reducer should handle NETWORK_CLEAR_ERRORS 1`] = `
  "errors": {
  },

`;

exports[`network reducer should handle NETWORK_SELECT_ACCOUNT 1`] = `
  "selectedAccount": 0x64371881e22e7cf48041c4da7efe0c9b7789aac7,

`;

exports[`network reducer should handle NETWORK_SET_ACCOUNTS 1`] = `
  "accounts": {
    "0": 0xb7237dd7dacd9da8e489b57d4631fc33342ff75f,
    "1": 0x236060666dbed392bb1f0b00b25e7c4b9cdcc4d5,
    "2": 0x64371881e22e7cf48041c4da7efe0c9b7789aac7,
    "3": 0x559b99a79cea7e1a495a244ee6ac816c1fb4a0be,
    "4": 0x670dc68af4125b8137d706bdec4abd8950d86c20,
    "5": 0x3ca0cbc8c9e2d629b13cfe7106535f532fb59c85,
    "6": 0x4d5d7edfb5e7057a0096bc653a7022c06360b3b3,
    "7": 0xd9ed6a1a2a635772583a87f29a089be5696c8ea9,
    "8": 0x5bd0ac539f551edcbff8045f0694729128e63d7f,
    "9": 0x7cc4056ab6c5d80c4288d59ef2263254b1fe6cb6,
  },

`;

exports[`network reducer should handle NETWORK_SET_NETWORK 1`] = `
  "selectedNetworkId": 2,

`;

exports[`network reducer should handle NETWORK_SET_PROVIDER with local 1`] = `
  "isLocal": true,
  "networks": {
    "0": {
      "bitcoin": bitcoin,
      "host": mainnet.infura.io/PVe9zSjxTKIP3eAuAHFA,
      "id": 1,
      "name": Mainnet (production),
      "nem": Mainnet,
      "protocol": https,
      "scanner": {
        "0": https://etherscan.io,
        "1": https://api.etherscan.io,
      },
    },
    "1": {
      "bitcoin": testnet,
      "host": rinkeby.infura.io/PVe9zSjxTKIP3eAuAHFA,
      "id": 4,
      "name": Rinkeby (test network),
      "nem": Testnet,
      "protocol": https,
      "scanner": https://rinkeby.etherscan.io,
    },
    "2": {
      "bitcoin": testnet,
      "host": kovan.infura.io/PVe9zSjxTKIP3eAuAHFA,
      "id": 42,
      "name": Kovan (test network),
      "nem": Testnet,
      "protocol": https,
      "scanner": https://kovan.etherscan.io,
    },
    "3": {
      "bitcoin": testnet,
      "host": localhost:3000/web3/,
      "id": 9999999999,
      "name": Localhost,
      "nem": Testnet,
      "protocol": https,
    },
  },
  "providers": {
    "0": {
      "disabled": true,
      "id": 1,
      "name": Metamask/Mist,
    },
  },
  "selectedProviderId": 2,

`;

exports[`network reducer should handle NETWORK_SET_PROVIDER without local 1`] = `
  "isLocal": false,
  "networks": {
    "0": {
      "bitcoin": bitcoin,
      "host": mainnet.infura.io/PVe9zSjxTKIP3eAuAHFA,
      "id": 1,
      "name": Mainnet (production),
      "nem": Mainnet,
      "protocol": https,
      "scanner": {
        "0": https://etherscan.io,
        "1": https://api.etherscan.io,
      },
    },
    "1": {
      "bitcoin": testnet,
      "host": rinkeby.infura.io/PVe9zSjxTKIP3eAuAHFA,
      "id": 4,
      "name": Rinkeby (test network),
      "nem": Testnet,
      "protocol": https,
      "scanner": https://rinkeby.etherscan.io,
    },
    "2": {
      "bitcoin": testnet,
      "host": kovan.infura.io/PVe9zSjxTKIP3eAuAHFA,
      "id": 42,
      "name": Kovan (test network),
      "nem": Testnet,
      "protocol": https,
      "scanner": https://kovan.etherscan.io,
    },
  },
  "providers": {
    "0": {
      "disabled": true,
      "id": 1,
      "name": Metamask/Mist,
    },
  },
  "selectedProviderId": 2,

`;

exports[`network reducer should handle NETWORK_SET_TEST_METAMASK 1`] = `
  "isMetamask": true,
  "providers": {
    "0": {
      "disabled": true,
      "id": 1,
      "name": Metamask/Mist,
    },
  },

`;

exports[`network reducer should handle NETWORK_SET_TEST_RPC 1`] = `
  "isLocal": true,
  "providers": {
    "0": {
      "disabled": true,
      "id": 6,
      "name": Local,
    },
  },

`;

exports[`network reducer should return initial state 1`] = `
  "accounts": {
  },
  "errors": {
  },
  "isLoading": false,
  "isLocal": false,
  "isMetamask": false,
  "networks": {
  },
  "preferMainnet": false,
  "priority": {
    "0": 4,
    "1": 2,
  },
  "providers": {
    "0": {
      "disabled": false,
      "id": 4,
      "name": ChronoBank,
    },
    "1": {
      "disabled": false,
      "id": 2,
      "name": Infura,
    },
  },
  "selectedAccount": null,
  "selectedNetworkId": null,
  "selectedProviderId": null,

`;
